--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "feedparser": "^1.1.4",
+    "lodash": "^4.13.1",
     "q": "^1.4.1",
     "request": "^2.72.0",
     "rss": "^1.2.1"
