--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "main": "lib/index",
   "scripts": {
-    "test": "mocha -u tdd --reporter spec"
+    "test": "mocha"
   },
   "homepage": "http://github.com/awocallaghan/node-rss-combiner",
   "author": {
@@ -36,6 +36,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
-    "mocha": "^2.5.3"
+    "mocha": "^2.5.3",
+    "sinon": "^2.3.0"
   }
 }
